--- a/website/index.html
+++ b/website/index.html
@@ -50,6 +50,54 @@
         </div>
     </section>
 
-    <!-- TODO: Product section -->
+    <!-- Product section -->
+    <section class="product">
+        <div class="product-title">
+            <h1 class="product-heading">Make every penny count</h1>
+            <p class="product-subheading">
+                Spend smarter, lower your bills, get cashback on everything you buy, and unlock credit to grow your business.
+            </p>
+        </div>
+
+        <div class="row-container">
+            <!-- Row 1 -->
+            <div class="row1-left">
+                <div class="content">
+                    <h2>Pay with Kobodrop, quick, simple and easy</h2>
+                    <p>Paying your bills on Kobdrop has never been easier. Whether you are paying for electricity or internet, Kobodrop gets it done within seconds.</p>
+                </div>
+            </div>
+            <div class="row1-right">
+                <div class="icon">
+                    <img src="./images/security.svg" alt="icon" />
+                </div>
+                <div class="content">
+                    <h2>Bank level security</h2>
+                    <p>Your money is 100% safe and secure on Kobodrop. No hassles, no glitches, get access to your money anytime.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row-container">
+            <!-- Row 2 -->
+            <div class="row2-left">
+                <div class="icon">
+                    <img src="./images/coins.svg" alt="icon" />
+                </div>
+                <div class="content">
+                    <h2>Cost reduction</h2>
+                    <p>Kobodrop reduced payments maintenance and processing fees. No hidden fees</p>
+                </div>
+            </div>
+            <div class="row2-right">
+                <div class="content">
+                    <h2>Pay with Kobodrop, quick, simple and easy</h2>
+                    <p>Paying your bills on Kobdrop has never been easier. Whether you are paying for electricity or internet, Kobodrop gets it done within seconds.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- TODO: Client section -->
 </body>
 </html>
