--- a/website/index.html
+++ b/website/index.html
@@ -98,6 +98,97 @@
         </div>
     </section>
 
-    <!-- TODO: Client section -->
+    <!-- Client section -->
+    <section class="client">
+        <div class="client-title">
+            <h1 class="client-heading">Transact seamlessly with...</h1>
+            <p class="client-subheading">
+                Connect your other accounts to Kobodrop seamlessly. Kobodrop supports 200+ integrations with other payment platforms like stripe, paypal, payoneer and others
+            </p>
+        </div>
+        <div class="client-container">
+            <img src="./images/client/1.svg" alt="client"/>
+            <img src="./images/client/2.svg" alt="client"/>
+            <img src="./images/client/3.svg" alt="client"/>
+            <img src="./images/client/4.svg" alt="client"/>
+            <img src="./images/client/5.svg" alt="client"/>
+            <img src="./images/client/6.svg" alt="client"/>
+            <img src="./images/client/7.svg" alt="client"/>
+            <img src="./images/client/8.svg" alt="client"/>
+            <img src="./images/client/9.svg" alt="client"/>
+            <img src="./images/client/10.svg" alt="client"/>
+            <img src="./images/client/11.svg" alt="client"/>
+            <img src="./images/client/12.svg" alt="client"/>
+        </div>
+    </section>
+
+    <!-- Testimonial section -->
+    <section class="testimonial">
+        <div class="testimonial-content">
+            <h1>Join other thousands of people growing with Kobodrop</h1>
+            <div class="testimonial-app">
+                <img src="./images/app-store.png" alt="app-store" />
+                <img src="./images/google-play.png" alt="google-play" />
+            </div>
+        </div>
+        <div class="testimonial-img-container">
+            <div class="testimonial-box">
+                <img src="./images/testimonial.svg" alt="testimonial-img" class="testimonial-image">
+                <div class="testimonial-hover-content">
+                    <p class="testimonial-text">
+                        “Kobodrop has helped me send and receive money with little to no complications. It’s what everyone needs!!.”
+                    </p>
+                    <div class="testimonial-author-rating">
+                        <p class="testimonial-author">Kemi Ogunnaike</p>
+                        <div class="testimonial-rating">★★★★★</div>
+                    </div>
+                    <p class="testimonial-location">Nigeria</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div class="footer-top">
+            <div class="footer-left">
+                <img src="./images/logo2.svg" alt="logo">
+                <p>Start spending the smart way</p>
+            </div>
+            <div class="footer-center">
+                <div class="footer-link-container">
+                    <h3>Product</h3>
+                    <p class="footer-links">Overview</p>
+                    <p class="footer-links">Features</p>
+                    <p class="footer-links">Solutions</p>
+                    <p class="footer-links">Contact</p>
+                    <p class="footer-links">Releases</p>
+                </div>
+                <div class="footer-link-container">
+                    <h3>Resources</h3>
+                    <p class="footer-links">Overview</p>
+                    <p class="footer-links">Features</p>
+                    <p class="footer-links">Solutions</p>
+                    <p class="footer-links">Contact</p>
+                    <p class="footer-links">Releases</p>
+                </div>
+            </div>
+            <div class="footer-right">
+                <h3>Get the app</h3>
+                <img src="./images/app-store2.svg" alt="app-store">
+                <img src="./images/google-play2.svg" alt="google-play">
+            </div>
+        </div>
+        <div class="footer-breaker" />
+        <div class="footer-copyright">
+            <p class="footer-text">
+                © 2023 Kobodrop. All rights reserved.
+            </p>
+            <div class="footer-social">
+                <img src="./images/twitter.svg" alt="twitter">
+                <img src="./images/linkedin.svg" alt="linkedin">
+                <img src="./images/facebook.svg" alt="facebook">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
