--- a/website/index.html
+++ b/website/index.html
@@ -31,6 +31,10 @@
         <div class="nav-right">
             Install Kobodrop
         </div>
+
+        <div class="nav-mobile-menu">
+            <img src="./images/menu.svg" alt="menu">
+        </div>
     </nav>
 
     <!-- Hero section -->
@@ -46,7 +50,8 @@
             </div>
         </div>
         <div class="hero-img">
-            <img src="./images/hero.png" alt="hero">
+            <img class="hero-img-primary" src="./images/hero.png" alt="hero">
+            <img class="hero-img-mobile" src="./images/hero-mobile.png" alt="hero-mobile">
         </div>
     </section>
 
@@ -174,8 +179,10 @@
             </div>
             <div class="footer-right">
                 <h3>Get the app</h3>
-                <img src="./images/app-store2.svg" alt="app-store">
-                <img src="./images/google-play2.svg" alt="google-play">
+                <div class="footer-app">
+                    <img src="./images/app-store2.svg" alt="app-store">
+                    <img src="./images/google-play2.svg" alt="google-play">
+                </div>
             </div>
         </div>
         <div class="footer-breaker" />
